[package]
name = "day_08"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11.0"
itertools = "0.14.0"
ordered-float = { version = "5.0", default-features = false }